--- a/index.html
+++ b/index.html
@@ -48,12 +48,9 @@
 						</div>
 					</div>
 				</div>
-				<!-- <a href="#!" class="inst-label" target="_blank"></a> -->
 			</section>
 			<section class="steps-block">
-				<!-- <div class="main-decor1"></div> -->
 				<div class="main-decor2 desktop-visible"></div>
-				<div class="main-decor6-mob"></div>
 				<div class="container">
 					<div class="steps">
 						<div class="step step1">
@@ -87,7 +84,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="btn-wrapper desktop-visible">
+					<div class="btn-wrapper">
 						<a href="#!" class="btn pop-op" data-popup="auth">Загрузить чек</a>
 					</div>
 				</div>
