--- a/winners.html
+++ b/winners.html
@@ -118,10 +118,10 @@
 										</td>
 										<td class="prize-td">
 											<div class="winners-prize">
-												<img src="img/prizes/prize2-icon.png" alt="5 550 балов Выручай-карту" title="5 550 балов Выручай-карту">
+												<img src="img/prizes/prize1-icon.png" alt="1 000 баллов" title="1 000 баллов">
 											</div>
 											<div class="winners-prize-info">
-												<div class="winners-prize-title">5 550 балов Выручай-карту</div>
+												<div class="winners-prize-title">1 000 баллов</div>
 											</div>
 										</td>
 									</tr>
@@ -136,10 +136,10 @@
 										</td>
 										<td class="prize-td">
 											<div class="winners-prize">
-												<img src="img/prizes/prize3-icon.png" alt="Сертификат Ozon.Travel" title="Сертификат Ozon.Travel">
+												<img src="img/prizes/prize2-icon.png" alt="Фитнес-браслет" title="Фитнес-браслет">
 											</div>
 											<div class="winners-prize-info">
-												<div class="winners-prize-title">Сертификат Ozon.Travel</div>
+												<div class="winners-prize-title">Фитнес-браслет</div>
 											</div>
 										</td>
 									</tr>
@@ -154,10 +154,10 @@
 										</td>
 										<td class="prize-td">
 											<div class="winners-prize">
-												<img src="img/prizes/prize2-icon.png" alt="5 550 балов Выручай-карту" title="5 550 балов Выручай-карту">
+												<img src="img/prizes/prize3-icon.png" alt="Спортивные наушники" title="Спортивные наушники">
 											</div>
 											<div class="winners-prize-info">
-												<div class="winners-prize-title">5 550 балов Выручай-карту</div>
+												<div class="winners-prize-title">Спортивные наушники</div>
 											</div>
 										</td>
 									</tr>
@@ -172,10 +172,10 @@
 										</td>
 										<td class="prize-td">
 											<div class="winners-prize">
-												<img src="img/prizes/prize3-icon.png" alt="Сертификат Ozon.Travel" title="Сертификат Ozon.Travel">
+												<img src="img/prizes/prize4-icon.png" alt="Беговая дорожка" title="Беговая дорожка">
 											</div>
 											<div class="winners-prize-info">
-												<div class="winners-prize-title">Сертификат Ozon.Travel</div>
+												<div class="winners-prize-title">Беговая дорожка</div>
 											</div>
 										</td>
 									</tr>
