--- a/faq.html
+++ b/faq.html
@@ -47,40 +47,35 @@
 							<div class="faq-item">
 								<div class="faq-item-title accordion-title">Какая компания проводит акцию?</div>
 								<div class="faq-item-text">
-									Организатором Акции является ООО «Мон’дэлис Русь». <br>
-									Место нахождения: Россия, 601123, г. Покров, Владимирская область, Петушинский р-н, ул. Франца Штольверка, д.10. <br>
-									Банковские реквизиты: ИНН: 3321020710 КПП: 997150001, <br>
-									р/с 40702810500000100331 в ООО Эйч-эс-би-си Банк (РР), 115054, Россия, Москва, Павелецкая площадь, д.2, стр.2, к/с 30101810400000000351, <br>
-									БИК: 044525351. <br><br>
+									Организатором Акции является ООО «Мон’дэлис Русь».Место нахождения: Россия, 601123, г. Покров, Владимирская область, Петушинский р-н, ул. Франца Штольверка, д.10. Банковские реквизиты: ИНН: 3321020710 КПП: 997150001, р/с 40702810500000100331 в ООО Эйч-эс-би-си Банк (РР), 115054, Россия, Москва, Павелецкая площадь, д.2, стр.2, к/с 30101810400000000351, БИК: 044525351. <br><br>
 
-									Оператором Акции является ЗАО «ЭМГ Промо». <br>
-									Место нахождения: Россия, 117105, г. Москва, ул. Варшавское шоссе, дом 1, стр.6,  ИНН 7701632924.
+									Оператором Акции является НАО «ЭМГ Промо». Место нахождения: Россия, 117105, г.Москва, вн.тер.г. Муниципальный округ Донской, Варшавское ш., д.1, стр.17, ком.1, офис В-101
 								</div>
 							</div>
 							<div class="faq-item">
 								<div class="faq-item-title accordion-title">Где можно ознакомиться с полными правилами акции?</div>
 								<div class="faq-item-text">
-									С полными Правилами Акции Участник может ознакомиться по ссылке <a href="http://alpengold.me/5ka" class="link">http://alpengold.me/5ka</a> <br>
-									Дополнительную интересующую информацию об условиях участия и проведения Акции, можно узнать на сайте Акции <a href="http://alpengold.me/5ka" class="link">http://alpengold.me/5ka</a> , заполнив форму обратной связи, а также отправив письмо на электронный ящик info@alpengold.me или по телефону горячий линии: 8-800-555-8000 (звонки на территории Российской Федерации бесплатные) 
- 
+									С полными Правилами Акции Участник может ознакомиться по ссылке <a href="http://lenta.alpengold.me" class="link" target="_blank">http://lenta.alpengold.me</a><br>
+									Дополнительную интересующую информацию об условиях участия и проведения Акции, можно узнать на сайте Акции <a href="http://lenta.alpengold.me" class="link" target="_blank">http://lenta.alpengold.me</a>, заполнив форму обратной связи, а также отправив письмо на электронный ящик info@alpengold.me или по телефону горячий линии: 8-800-555-8000 (звонки на территории Российской Федерации бесплатные) 
 								</div>
 							</div>
 							<div class="faq-item">
 								<div class="faq-item-title accordion-title">Какие сроки проведения акции?</div>
 								<div class="faq-item-text">
-									1.Общие сроки проведения Акции с 00:00:00 01 февраля 2021 года по 23:59:59 30 апреля 2021 года (включительно). Все сроки, указанные в настоящих Правилах, исчисляются по московскому времени. <br>
-									2.	Срок приобретения Продукции Покупателем по карте лояльности торговой сети Пятёерочка  («ВЫРУЧАЙ-карта»): с 01 февраля 2021 года по 28 февраля 2021 года (включительно). <br>
-									3.	Срок регистрации кассовых чеков: с 01 февраля 2021 года по 28 февраля 2021 года (включительно). <br>
-									4.	Срок определения обладателей Пакет Баллов и Призов: с 01 февраля 2021 года по 30 апреля 2021 года (включительно).<br>
-									1.5.	Срок вручения Пакет Баллов и Призов: с 01 февраля 2021 года по 30 апреля 2021 года (включительно).
+									Срок проведения Акции: <br>
+									1. Общие сроки проведения Акции с 00:00:00 24 февраля 2021 года по 23:59:59 30 апреля 2021 года (включительно). <br>
+									2.Срок приобретения Продукции Покупателем по карте Клуба «Лента»: с 24 февраля 2021 года по 23 марта 2021 года (включительно). <br>
+									3.Срок регистрации кассовых чеков: с 24 февраля 2021 года по 23 марта 2021 года (включительно).  <br>
+									4.Срок определения обладателей  Призов: с 24 марта 2021 года по 30 апреля 2021 года (включительно). <br>
+									5.Срок вручения Призов: с 14 апреля 2021 года по 30 апреля 2021 года (включительно).
 								</div>
 							</div>
 							<div class="faq-item">
 								<div class="faq-item-title accordion-title">Что необходимо сделать, чтобы принять участие в акции?</div>
 								<div class="faq-item-text">
 									Для того, чтобы стать участником Акции необходимо: <br>
-									•	Приобрести Продукцию в количестве 1 упаковки АЛЬПЕН ГОЛЬД МаксФан 150 грамм или 2 упаковок АЛЬПЕН ГОЛЬД до 95 грамм в одном чеке в магазинах, согласно адресной программе, указанной в п. 6 настоящих Правил, предъявив на кассе «ВЫРУЧАЙ-карту» и получить кассовый чек за покупку. <br>
-									•	В  период с 00:00:00 часов (по московскому времени) «01» февраля 2021 года по 23:59:59 часов (по московскому времени) «28» февраля 2021 года зарегистрировать Чек на Сайте http://alpengold.me/5ka 
+									•	Приобрести Продукцию, указанную в п.2. настоящих Правил в количестве 2 (Две) упаковки АЛЬПЕН ГОЛЬД в одном чеке в магазинах, согласно адресной программе, указанной в п. 3 настоящих Правил, предъявив на кассе перед покупкой «Карту лояльности Лента» и получить кассовый чек за покупку. <br>
+									В  период с 00:00:00 часов (по московскому времени) «24» февраля 2021 года по 23:59:59 часов (по московскому времени) «23» марта 2021 года зарегистрировать Чек на Сайте <a href="http://lenta.alpengold.me" class="link" target="_blank">http://lenta.alpengold.me</a> 
 								</div>
 							</div>
 							<div class="faq-item">
@@ -118,19 +113,17 @@
 							<div class="faq-item">
 								<div class="faq-item-title accordion-title">В каких магазинах я могу купить продукт?</div>
 								<div class="faq-item-text">
-									Акция проводится во всех магазинах торговой сети «Пятерочка» на всей территории Российской Федерации.
+									Акция проводится во всех магазинах торговой сети «Лента» на всей территории Российской Федерации.
 								</div>
 							</div>
 							<div class="faq-item">
 								<div class="faq-item-title accordion-title">Какие призы я могу выиграть?</div>
 								<div class="faq-item-text">
 									В Акции можно выиграть следующие призы: <br>
-									Пакет Баллы - «5550 баллов на ВЫРУЧАЙ-карту» <br>
-									Еженедельный Приз – Электронный сертификат на покупку в интернет-магазине «ОЗОН» номиналом 2 000,00<br>
-
-									 Главный Приз –  электронный сертификат на поездку (путешествие) , номиналом 300 000,00 рублей<br>
-
-									 Специальный Приз – дорожный пластиковый чемодан на колесах, с наполнением на 70 плиток шоколада Alpen Gold в ассортименте
+									Пакет Баллы - «1000 Баллов на Карту лояльности»<br>
+									Приз №1 – Фитнес браслет <br>
+									Приз №2 – Спортивные наушники<br>
+									Главный Приз – Беговая дорожка
 								</div>
 							</div>
 							<div class="faq-item">
@@ -140,7 +133,7 @@
 								</div>
 							</div>
 							<div class="faq-item">
-								<div class="faq-item-title accordion-title">Сколько Чеков я могу загрузить на сайт?</div>
+								<div class="faq-item-title accordion-title">Сколько чеков я могу загрузить на сайт?</div>
 								<div class="faq-item-text">
 									Вы можете загрузить неограниченное количество чеков.
 								</div>
@@ -161,43 +154,34 @@
 							<div class="faq-item">
 								<div class="faq-item-title accordion-title">Сколько призов я могу выиграть за акцию?</div>
 								<div class="faq-item-text">
-									•	Максимальное количество Пакетов Баллов из числа указанных в п.7 настоящих Правил, которое может выиграть один Участник за весь период проведения Акции, не ограничено. <br>
-									•	Общий номинал Еженедельных Призов, которые может выиграть один Участник не должен превышать сумму 4000 р. за весь период Акции. <br>
-									•	Максимальное количество Пакет Баллов из числа указанных в п.10 настоящих Правил, которое может выиграть один Участник за весь период проведения Акции, не ограничено.
+									•	Максимальное количество Пакет Баллов из числа указанных в п.5.1 настоящих Правил, которое может выиграть один Участник за весь период проведения Акции, не ограничено. <br>
+									•	Приз№1 в количестве 1 (Одна) штука. <br>
+									•	Приз№2 и денежная часть Приз №2  в количестве 1 (Одна) штука. <br>
+									•	Главный Приз и денежная часть Главного Приза в количестве 1 (Одна) штука
 								</div>
 							</div>
 							<div class="faq-item">
 								<div class="faq-item-title accordion-title">Как я узнаю, что выиграл приз?</div>
 								<div class="faq-item-text">
-									Информация о выигранных призах отображается в Вашем личном кабинете (на сайте <a href="http://alpengold.me/5ka" class="link">http://alpengold.me/5ka</a>)
+									Информация о выигранных призах отображается в Вашем  личном кабинете (на сайте <a href="http://lenta.alpengold.me" class="link" target="_blank">http://lenta.alpengold.me</a>)
 								</div>
 							</div>
 							<div class="faq-item">
 								<div class="faq-item-title accordion-title">Как происходит вручение приза?</div>
 								<div class="faq-item-text">
-									Получение Гарантированных Призов <br>
-									Гарантированный Приз передается Победителю путем отправки электронного сертификата на электронный адрес Победителя, указанный при регистрации на сайте Акции <a href="http://alpengold.me/5ka" class="link">http://alpengold.me/5ka</a> <br>
-
 									Получение Пакета Баллов <br>
-									Пакет Баллов передается Победителю путем пополнения баланса баллов «ВЫРУЧАЙ-карты» торговой сети Пятёрочка по номеру карты, которая была указана при регистрации на сайте <a href="http://alpengold.me/5ka" class="link">http://alpengold.me/5ka</a> <br>
-									Получение Еженедельных Призов<br>
-									Еженедельный Приз передается Победителю путем  отображения электронного кода в Личном Кабинете Участника, указанный при регистрации на сайте Акции  <a href="http://alpengold.me/5ka" class="link">http://alpengold.me/5ka</a><br>
-									Получение Специального Приза<br>
-									Для получения Специального Приза Победитель обязуется предоставить представителю Оператора следующие документы и информацию в пункте выдачи Специального Приза в день определения Победителя.<br>
+									В период, указанный в п.1.5. настоящих Правил, Участник Акции получает Пакет Баллов<br>
+									Пакет Баллов передается Победителю путем пополнения баланса баллов «Карты лояльности Лента» торговой сети Лента по номеру карты, которая была указана при регистрации на сайте http://lenta.alpengold.me
+									Получение Приз №1, <br>
+									В течении срока, указанного в п 1.5. настоящих правил, Оператор осуществляет вручение Приз №1 Победителю посредством доставки  Приз №1 почтой России на фактический адрес места проживания Победителя, с понедельника по пятницу (включительно) с 09:30 ч до 18:30 ч. Расходы по доставке Приз №1 несет Организатор.  С момента получения Приз №1или  Приз №2 победитель Акции несет все риски утраты, случайной гибели или повреждения этого Приз №1.<br>
+									Получение Главного Приза, Приз №2<br>
+									Для получения Приз №2 или Главного Приза Победитель обязуется предоставить Оператору следующие документы и информацию в письме на адрес электронной почты info@alpengold.me не позднее чем через 72 (Семьдесят два) часа после оповещения о победе:<br>
 									•	Сканированную копию страниц российского паспорта, содержащих информацию о серии и номере паспорта, код подразделения, ФИО, дате рождения победителя, месте жительства;<br>
 									•	Копию своего свидетельства ИНН;<br>
 									•	Акт приема-передачи Приза, подписанный Победителем.<br>
-									•	Иную информацию по запросу Оператора Акции, необходимую для вручения Главного Приза Победителю<br>
-									Вручение Специального Приза <br>
-									С момента получения Специального Приза победитель Акции несет все риски утраты, случайной гибели или повреждения этого Специального Приза.<br>
-									Получение Главного Приза<br>
-									Для получения Главного Приза Победитель обязуется предоставить Оператору следующие документы и информацию в письме на адрес электронной почты info@alpengold.me не позднее чем через 72 часа после оповещения о победе:<br>
-									•	Сканированную копию страниц российского паспорта, содержащих информацию о серии и номере паспорта, код подразделения, ФИО, дате рождения победителя, месте жительства;<br>
-									•	Копию своего свидетельства ИНН;<br>
-									•	Акт приема-передачи Приза, подписанный Победителем.<br>
-									•	Иную информацию по запросу Оператора Акции, необходимую для вручения Главного Приза Победителю.<br>
-									Вручение Главного Приза <br>
-									Оператор осуществляет вручение Главного Приза Победителю посредством отправки электронного сертификата на адрес электронной почты, указанный при регистрации на сайте Акции <a href="http://alpengold.me/5ka" class="link">http://alpengold.me/5ka</a>
+									•	Иную информацию по запросу Оператора Акции, необходимую для вручения Приз №2 или Главного Приза Победителю.<br>
+									Вручение Приз №2 или Главного Приза<br>
+									В течении срока, указанного в п 1.5. настоящих правил, Оператор осуществляет вручение Главного Приза Победителю посредством доставки  Приз №2 или Главного Приза почтой России на фактический адрес места проживания Победителя, с понедельника по пятницу (включительно) с 09:30 ч до 18:30 ч. Расходы по доставке Главного Приза несет Организатор.  С момента получения Главного Приза победитель Акции несет все риски утраты, случайной гибели или повреждения этого Приз №2 или Главного Приза.
 								</div>
 							</div>
 							<div class="faq-item">
@@ -215,7 +199,7 @@
 							<div class="faq-item">
 								<div class="faq-item-title accordion-title">Могут ли измениться правила акции? Может ли акция закончиться досрочно?</div>
 								<div class="faq-item-text">
-									Организатор оставляет за собой право изменять условия данной Акции, предварительно уведомив Участников на сайте <a href="http://alpengold.me/5ka" class="link">http://alpengold.me/5ka</a> за 3 (три) календарных дня до вступления изменений в силу.
+									Организатор оставляет за собой право изменять условия данной Акции, предварительно уведомив Участников на сайте <a href="http://lenta.alpengold.me" class="link" target="_blank">http://lenta.alpengold.me</a> за 3 (три) календарных дня до вступления изменений в силу.
 								</div>
 							</div>
 							<div class="faq-item">
