--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
 									<div class="prize-title">Спортивные <br>наушники</div>
 									<div class="prize-text"></div>
 								</div>
+								<div class="prize prize34">
+									<div class="prize-img">
+										<img src="img/prize34.png" alt="">
+									</div>
+									<div class="prize-title">Rakamakafit</div>
+									<div class="prize-text"></div>
+								</div>
 							</div>
 						</div>
 						<div class="prize-col">
