--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
 									<div class="prize-img">
 										<img src="img/prize34.png" alt="">
 									</div>
-									<div class="prize-title">Rakamakafit</div>
-									<div class="prize-text"></div>
+									<div class="prize-title">RAKAMAKAFIT-ONLINE</div>
+									<div class="prize-text">Доступ к программе <br>тренировок и питания</div>
 								</div>
 							</div>
 						</div>
