--- a/winners.html
+++ b/winners.html
@@ -118,6 +118,24 @@
 										</td>
 										<td class="prize-td">
 											<div class="winners-prize">
+												<img src="img/prizes/prize34-icon.png" alt="1 000 баллов" title="1 000 баллов">
+											</div>
+											<div class="winners-prize-info">
+												<div class="winners-prize-title">1 000 баллов</div>
+											</div>
+										</td>
+									</tr>
+									<tr>
+										<td class="desktop-visible">Александр Р.</td>
+										<td class="desktop-visible">+7(***)***-00-00</td>
+										<td class="desktop-visible">06.09.2020</td>
+										<td class="mobile-visible">
+											<div class="winners-name">Александр Р.</div>
+											+7(***)***-00-00 <br>
+											06.09.2020
+										</td>
+										<td class="prize-td">
+											<div class="winners-prize">
 												<img src="img/prizes/prize1-icon.png" alt="1 000 баллов" title="1 000 баллов">
 											</div>
 											<div class="winners-prize-info">
